# evil-engine

./: .gitignore  8X8_TILE_FIX.md  ARCHITECTURE_SUMMARY.md  BLB_ROUND_TRIP_IMPLEMENTATION.md  C99_PARSING_GUIDE.md  GDEXTENSION_INTEGRATION.md  GDEXTENSION_STATUS.md  IMPLEMENTATION_STATUS.md  Makefile  README.md  REFACTORING_SUMMARY.md  ROUND_TRIP_TEST.md  SESSION_SUMMARY.md  SETUP_GUIDE.md  flake.nix  game.gdextension  generate_stage.gd  generate_stage.gd.uid  meson.build  meson_options.txt  profile_decode.gd  profile_scene.gd  profile_sprites.gd  project.godot  test_blb_extension.gd  test_blb_level.gd  test_blb_level.gd.uid  test_sprite_count.gd  test_sprite_count.gd.uid  test_trace.gd
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: hfyrap7fr0i02j28v7nr8cfqggg5w630-source
.github/: copilot-instructions.md
addons/blb_importer/: ADDON_REVIEW.md  IMPLEMENTATION_COMPLETE.md  SYSTEMS_CHECKLIST.md  blb_browser_dock.gd  blb_browser_dock.gd.uid  blb_import_plugin.gd  blb_import_plugin.gd.uid  blb_reader.gd  (+12 more)
demo/: complete_game_demo.gd  entity_sprites.gd  entity_sprites.gd.uid  game_runner.gd  game_runner.gd.uid  game_runner.tscn  level_loader.gd  level_loader.gd.uid  level_scene.gd  level_scene.gd.uid  level_scene.tscn  level_viewer.gd  level_viewer.gd.uid  level_viewer.tscn  main.gd  parallax_viewer.gd  parallax_viewer.gd.uid  parallax_viewer.tscn  trace_player.gd
docs/: AI_100_PERCENT_ASSESSMENT.md  AI_COVERAGE_70_PERCENT.md  AI_COVERAGE_FINAL.md  AI_IMPROVEMENTS_SUMMARY.md  ALL_ENTITY_TYPES_COMPLETE.md  BLB_FORMAT_100_PERCENT.md  BOOST_TO_90_PERCENT_PLAN.md  COMPLETE-GAP-ANALYSIS-FINAL.md  COMPLETE_FUNCTION_STATUS.md  COMPLETE_SUCCESS_SUMMARY.md  CONSOLIDATION_SUMMARY.md  DOCUMENTATION_FINAL_STATUS.md  DOCUMENTATION_PROJECT_COMPLETE.md  DOCUMENTATION_V2_SUMMARY.md  FINAL_ACHIEVEMENT_99_PERCENT.md  FINAL_DOCUMENTATION_COMPLETE.md  FINAL_SESSION_SUMMARY.md  FUNCTION_ANALYSIS_COMPLETE.md  FUNCTION_ANALYSIS_HYPOTHESES.md  FUNCTION_DISCOVERIES.md  FUNCTION_DISCOVERIES_BATCH_1.md  FUNCTION_DISCOVERIES_BATCH_2.md  GAPS-REMAINING.md  GAPS_CLOSED_2026-01-15.md  GAPS_FULLY_CLOSED.md  GAP_ANALYSIS_CURRENT.md  JOE_HEAD_JOE_COMPLETE.md  KLOGG_ANALYSIS.md  PASSWORD_SYSTEM_ANALYSIS.md  PHASE1-COMPLETE.md  PHYSICS_QUICK_REFERENCE.md  README.md  SESSION_COMPLETE_2026-01-15.md  SYSTEMATIC_ENTITY_ANALYSIS_PLAN.md  SYSTEMS_INDEX.md  TO_90_PERCENT_ALL_SYSTEMS.md  UNANALYZED_FUNCTIONS_LIST.md  VERIFICATION_REPORT.md  blb-asset-handling.md  blb-data-format.md  (+10 more)
gdextension/: api.c  api.h  blb_archive.c  blb_archive.h  class_binding.c  class_binding.h  defs.h  engine_node.c  entry.c  gd_helpers.c  gd_helpers.h
src/: evil_engine.c  evil_engine.h  export_assets.c  game.c  game.h  render_layers.c  render_to_png.c  test_level_view.c  test_render.c
traces/: skullmonkeys_trace.jsonl
(+216 files in other folders)
